# CELR-Control-for-Expensive-LLM-Reasoning

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  analyze_results.py  benchmark_gpt4_log.txt  celr_chat.py  cortex_weights.pt  debug_log.txt  demo.py  implementation_plan.md  live_simulation.py  optimize_gpu.md  products.csv  pyproject.toml  requirements.txt  run_chat.bat  run_chat.sh  run_gpt4_benchmark.py  task.md  test_runtime.py  walkthrough.md
.agent/gsd/: CURRENT_TASK.md  PHASE-1-PLAN.md  PLAN.md  SPEC.md
benchmarks/: benchmark_gpt4_tasks.py  benchmark_runner.py  benchmark_tasks.py  results_phase6.json
benchmarks/results/: benchmark_1770961593.json  benchmark_1770961732.json  benchmark_gpt4_1771030165.json  benchmark_gpt4_1771031651.json  benchmark_gpt4_1771031742.json  benchmark_gpt4_1771031837.json  benchmark_gpt4_1771031971.json  benchmark_gpt4_1771032094.json  benchmark_gpt4_1771033922.json  benchmark_gpt4_1771033985.json  benchmark_gpt4_1771034048.json  benchmark_gpt4_1771034110.json  benchmark_gpt4_1771034232.json  benchmark_gpt4_1771039315.json  benchmark_gpt4_1771040046.json  benchmark_gpt4_1771041026.json  benchmark_gpt4_1771041759.json  benchmark_gpt4_1771042616.json  benchmark_gpt4_1771092696.json  benchmark_gpt4_1771092772.json  benchmark_gpt4_1771092816.json  benchmark_gpt4_1771092862.json  benchmark_gpt4_1771093198.json  benchmark_gpt4_1771094991.json  benchmark_gpt4_1771904783.json  benchmark_standard_1771628958.json  benchmark_standard_1771629859.json  benchmark_standard_1771630870.json  benchmark_standard_1771631915.json  benchmark_standard_1771632866.json  benchmark_standard_1771633427.json  benchmark_standard_1771635528.json
celr/: __init__.py  cli.py  cli_wrapper.py
celr/core/: __init__.py  agents.py  config.py  cost_tracker.py  escalation.py  exceptions.py  executor.py  llm.py  logger.py  planner.py  prompts.py  reasoning.py  reflection.py  runtime.py  tools.py  trainer.py  types.py  verifier.py
celr/cortex/: __init__.py  council.py  gatekeeper.py  model_nano.py  policy.py  router.py  state.py  trainer.py
celr/interface/: chat.py  dashboard.py
celr/training/: __init__.py  data_generator.py  pipeline.py  scorer.py  self_reward.py
docs/: research_inspirations.md
logs/Traj/: demo_1770952633.json  demo_1770953683.json  demo_1770953834.json  demo_1770953866.json  demo_1770953896.json  (+11 more)
scripts/: commit_history.ps1  fix_author.ps1
tests/: conftest.py  test_config.py  test_cortex_integration_manual.py  test_cortex_nano.py  test_cost_tracker.py  test_council.py  test_data_generator.py  test_e2e_comprehensive.py  test_escalation.py  test_exceptions.py  test_pipeline.py  test_reflection.py  test_router.py  test_scorer.py  test_self_reward.py  test_tools.py  test_types.py  test_verifier.py
(+4 files in other folders)
