[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celr"
version = "0.1.0"
description = "Control for Expensive LLM Reasoning - A meta-brain for AI agents."
readme = "README.md"
authors = [
    { name = "Bhagya Banghadai", email = "bhagya@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",  # For CELRConfig (BaseSettings)
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",  # For DAG handling in plans
    "tenacity>=8.0.0",  # Retry with exponential backoff for LLM calls
    "numpy>=1.24.0",  # For vector similarity (Active Memory)
]

[project.scripts]
celr = "celr.cli_wrapper:main"

[tool.hatch.build.targets.wheel]
packages = ["celr"]
